# EasiAuto

./: .gitignore  AGENTS.md  README.md  auto_login_for_easinote.py  automator.py  banner.py  build.bat  ci_automation_manager.py  ci_manager.py  components.py  config.py  consts.py  default_config.py  main.py  pyproject.toml  qfw_widgets.py  ui.py  update.py  utils.py
.github/workflows/: build.yaml  codeql.yml
docs/: ARCHITECTURE.md
src/EasiAuto/: __init__.py  automator.py  ci_manager.py  components.py  config.py  consts.py  launcher.py  main.py  qfw_widgets.py  ui.py  update.py  utils.py
src/EasiAuto/common/: announcement.py  config.py  consts.py  profile.py  secret_store.py  update.py  utils.py
src/EasiAuto/common/runtime/: __init__.py  exception_handler.py  ipc.py  singleton.py
src/EasiAuto/core/: __init__.py  binding_sync.py  manager.py
src/EasiAuto/core/automation/: base.py  cv.py  fixed.py  inject.py  uia.py
src/EasiAuto/core/automator/: __init__.py  banyou.py  base.py  cv.py  fixed.py  inject.py  uia.py
src/EasiAuto/integrations/: classisland_manager.py  classisland_manager_new.py
src/EasiAuto/view/: main_window.py  utils.py
src/EasiAuto/view/components/: __init__.py  announcement_card.py  pre_run_popup.py  qfw_widgets.py  setting_card.py  status_overlay.py  warning_banner.py
src/EasiAuto/view/pages/: __init__.py  about_page.py  automation_page.py  automation_page_legacy.py  binding_page.py  config_page.py  profile_editor.py  update_page.py
tools/: build.py  normolize_log.py  release.py
tools/develop/ENLoginInjector/: ENLoginInjector.slnx
tools/develop/ENLoginInjector/ENLoginInjector/: ENLoginInjector.csproj  LoginInjector.cs
tools/develop/minimal_opencv/: README.md  build_minimal.ps1
vendors/: cv2.cp313-win_amd64.pyd  cv2.pyd
vendors/Snoop/: LICENSE.txt
