[dependency-groups]
dev = ["coloredlogs>=15.0.1", "nuitka>=2.8.9"]

[project]
name = "easiauto"
version = "1.0.1"
description = "自动登录希沃白板的小工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "psutil>=7.1.3",
    "pyautogui>=0.9.54",
    "pydantic>=2.12.5",
    "pyside6==6.9.3",
    "pyside6-fluent-widgets>=1.9.2",
    "pywin32>=311",
    "pywinauto>=0.6.9",
    "qt-pydantic>=0.1.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.pyright]
"autoImportCompletions" = true
"exclude" = [
    "**/.venv",
    "**/__pycache__",
    "**/node_modules",
    "**/venv",
    "build",
    "dist",
]
"include" = ["**/*.py"]
"pythonPlatform" = "Windows"
"pythonVersion" = "3.12"
"reportArgumentType" = "warning"
"reportAssertAlwaysTrue" = "information"
"reportAttributeAccessIssue" = "information"
"reportConstantRedefinition" = "warning"
"reportDuplicateImport" = "warning"
"reportGeneralTypeIssues" = "warning"
"reportImplicitStringConcatenation" = "information"
"reportImportCycles" = "warning"
"reportIncompatibleMethodOverride" = "warning"
"reportIncompatibleVariableOverride" = "warning"
"reportMissingImports" = "warning"
"reportMissingParameterType" = "information"
"reportMissingTypeStubs" = "information"
"reportOptionalCall" = "information"
"reportOptionalContextManager" = "information"
"reportOptionalIterable" = "information"
"reportOptionalMemberAccess" = "information"
"reportOptionalOperand" = "information"
"reportOptionalSubscript" = "information"
"reportOverlappingOverload" = "warning"
"reportPrivateUsage" = "information"
"reportSelfClsParameterName" = "information"
"reportUnnecessaryCast" = "information"
"reportUnnecessaryIsInstance" = "information"
"reportUntypedBaseClass" = "information"
"reportUntypedClassDecorator" = "information"
"reportUntypedFunctionDecorator" = "information"
"reportUntypedNamedTuple" = "information"
"reportUnusedClass" = "information"
"reportUnusedFunction" = "information"
"reportUnusedImport" = "information"
"reportUnusedVariable" = "information"
"strictDictionaryInference" = false
"strictListInference" = false
"strictSetInference" = false
"typeCheckingMode" = "basic"
"useLibraryCodeForTypes" = true

[[tool.pyright.executionEnvironments]]
"extraPaths" = [".", "./config", "./ui", "./view"]
"pythonPlatform" = "All"
"pythonVersion" = "3.12"
"root" = "."

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "preserve"
skip-magic-trailing-comma = false

[tool.ruff.lint]
ignore = [
    "ARG002",
    "B008",
    "C901",
    "E203",
    "E402",
    "E501",
    "ERA001",
    "F841",
    "N801",
    "N802",
    "N815",
    "N999",
    "PLC0415",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PTH123",
    "RUF001",
    "RUF002",
    "RUF003",
]
select = [
    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle errors
    "ERA", # eradicate
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PL",  # pylint
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RUF", # ruff-specific rules
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
