[dependency-groups]
dev = ["nuitka>=2.8.9"]

[project]
name = "EasiAuto"
version = "1.1.0a2"
description = "一款自动登录希沃白板的小工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "opencv-python>=4.12.0.88",
    "packaging>=25.0",
    "pillow>=12.0.0",
    "psutil>=7.1.3",
    "pyautogui>=0.9.54",
    "pydantic>=2.12.5",
    "pyside6==6.9.3",
    "pyside6-fluent-widgets>=1.9.2",
    "pywin32>=311",
    "pywinauto>=0.6.9",
    "qt-pydantic>=0.1.1",
    "requests>=2.32.5",
    "windows11toast>=1.2.6",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.ruff]
line-length = 120
target-version = "py313"
